premiere initialisation de projet

--- a/auth-ent/src/main/resources/application.properties
+++ b/auth-ent/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine = innodb
 
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 
 spring.main.allow-bean-definition-overriding=true
