--- a/gest-user-ent/src/main/resources/application.properties
+++ b/gest-user-ent/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.properties.hibernate.dialect.storage_engine = innodb
 
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
