--- a/gestioninterventions-ent/src/main/resources/application.properties
+++ b/gestioninterventions-ent/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine = innodb
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/gestionintervention
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
