--- a/gestionnote-ent/src/main/resources/application.properties
+++ b/gestionnote-ent/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine = innodb
 
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 
 spring.jackson.serialization.fail-on-empty-beans=false
