--- a/trombinoscope/src/main/resources/application.properties
+++ b/trombinoscope/src/main/resources/application.properties
@@ -15,7 +15,7 @@ eureka.instance.hostname= localhost
 
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 
 
